2006-10-21  Miguel de Icaza  <miguel@novell.com>

	* src/gunicode.c (g_filename_from_utf8): Use g_strlcpy here. 

	* src/gmarkup.c (g_markup_parse_context_parse): Do not dereference
	null values here.   This gets things a little bit further in
	corlib, but not too far.

	* src/gdir.c (g_dir_read_name): Do not return . or ..

	* src/gstr.c (g_ascii_xdigit_value): Make this into a function,
	thanks to Paolo for pointing the problem with the double macro
	expansion. 

	* src/gmodule.c (g_module_open): Actually return NULL if we fail
	to load the module (was hiding the real bug in the pinvoke tests).

	(g_module_build_path): Do not prepend "lib" if the "lib" is part
	of the call.

	* src/gstr.c (g_strsplit): this routine has some non-expected
	behavior, if the string begins with the delimiter, it will return
	an empty first string, unlike strtok

	* src/gpath.c (g_path_get_dirname): Return "." as a dirname for
	paths that do not contain a directory.

2006-10-18 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* test/array.c: new test for insertion in the middle of other values.
	* src/garray.c: fixed destination index.

2006-10-18  Miguel de Icaza  <miguel@novell.com>

	* src/gpath.c (g_build_path): Do not append terminator if the next
	string is empty.

	* src/gutf8.c (g_utf8_to_utf16): Include trailing zero as
	documented.
	(g_utf16_to_utf8): Include trailing zero as documented.

2006-10-17  Miguel de Icaza  <miguel@novell.com>

	* src/gstr.c (g_strdown): Actually move.

	* src/gmarkup.c (g_markup_parse_context_parse): Accept dots in the
	sequence, reset the state after a closing element.

	* src/garray.c (g_array_insert_vals): Shift the elements the
	correct amount.

	(g_array_insert_vals): Should actually use the
	number of elements to insert.

	* test/array.c: Add new test case, this was happening in the JIT. 

	* Add _GNU_SOURCE at configure time, remove from sources.
	
	* src/gstr.c (g_strsplit): Empty strings return a 0 value vector.
